made changes to Läxhjälpen

--- a/Webbutveckling/Hemsidor/Läxhjälpen/Index.html
+++ b/Webbutveckling/Hemsidor/Läxhjälpen/Index.html
@@ -11,7 +11,7 @@
 	
 	<header>
 		<div class="hwrap">
-			<a href=""> <img src="/" /> </a> <!-- Logotyp -->
+			<a href=""> <img src="logotype.png" alt="logotype" title="Läxhjälpen"/> </a> <!-- Logotyp -->
 			<h1>Läxhjälpen</h1>
 		</div>
 	</header>
