Changed läxa cirklar and läxhjälpen

--- a/Webbutveckling/Hemsidor/Läxhjälpen/Index.html
+++ b/Webbutveckling/Hemsidor/Läxhjälpen/Index.html
@@ -5,6 +5,8 @@
 		<title>Läxhjälpen</title>
 		
 		<link rel="stylesheet" type="text/css" href="style.css" />
+		
+		<link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Merienda+One" />
 	</head>
 	
 <body class="startpage">
