modified rörande fyrkant and Testar hemsidan

--- a/Webbutveckling/Hemsidor/Testar/Index.html
+++ b/Webbutveckling/Hemsidor/Testar/Index.html
@@ -2,12 +2,14 @@
 <HTML>
 	<head>
 		<title>Tjo bre</title>
-		<meta name = "Author" content = "Elias Axelsson"/>
+		<meta http-equiv = "Content-Type" content = "text/html; charset = UTF-8" />
 		<link rel = "Stylesheet" type = "text/css" href = "Stil.css"/>
 	</head>
 	
-	<body>
-		<div id = "Text">
-		</div>
-	</body>
+<body>
+	<header>
+		<h1>Elias Axelsson</h1>
+	</header>
+		
+</body>
 </HTML>
