Modified Battle ship and Läxuppgift v48

--- a/Webbutveckling/Hemsidor/Läxa v.48/Läxuppgift v 48.html
+++ b/Webbutveckling/Hemsidor/Läxa v.48/Läxuppgift v 48.html
@@ -15,12 +15,12 @@
 		
 		<div id="content">
 		
-			<div id="nav">
+			<nav>
 				<p id="navlist">Navigation</p>
 				<a href=""><p>Startsida</p></a>
 				<a href=""><p>Om oss</p></a>
 				<a href=""><p>Kontakt</p></a>
-			</div>
+			</nav>
 			
 			<div id="text">
 			
