--- a/Webbutveckling/Hemsidor/Testar/Index.html
+++ b/Webbutveckling/Hemsidor/Testar/Index.html
@@ -2,14 +2,21 @@
 <HTML>
 	<head>
 		<title>Tjo bre</title>
-		<meta http-equiv = "Content-Type" content = "text/html; charset = UTF-8" />
-		<link rel = "Stylesheet" type = "text/css" href = "Stil.css"/>
+		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+		<link rel="Stylesheet" type="text/css" href="Stil.css"/>
 	</head>
 	
-<body>
+<body class="Container">
 	<header>
 		<h1>Elias Axelsson</h1>
 	</header>
+	
+	<section id="Buttons">
+		<h2><a href="Index.html">Hem</a></h2>
+		<h2><a href="">Om</a></h2>
+		<h2><a href="">Kontakt</a></h2>
+		<h2><a href="">Projekt</a></h2>
+	</section>
 		
 </body>
 </HTML>
