Modified Min portfolio

--- a/Webbutveckling/Hemsidor/Min portfolio/Index.html
+++ b/Webbutveckling/Hemsidor/Min portfolio/Index.html
@@ -8,9 +8,7 @@
 	
 <body class="Container">
 	<header>
-		<div id="headform">
-			<h1>Elias Axelsson</h1>
-		</div>
+		<h1>Elias Axelsson</h1>
 	</header>
 	
 	<section id="Buttons">
@@ -20,9 +18,9 @@
 		<h2><a href="">Projekt</a></h2>
 	</section>
 	
-	<div id="Picture">
-		<img src="
-	</div>
+	<section id="Picture">
+		<img src="206122_4038337287255_1041812762_n.jpg" />
+	</section>
 		
 	<footer>
 		<p>Copyright Elias Axelsson</p>
