changed my portfolio and made some lesson tasks

--- a/Webbutveckling/Hemsidor/Min portfolio/Index.html
+++ b/Webbutveckling/Hemsidor/Min portfolio/Index.html
@@ -8,18 +8,23 @@
 	
 <body class="Container">
 	<header>
-		<h1>Elias Axelsson</h1>
+		<div id="style">
+			<img src="images/header_text.png" />
+		</div>
+		
 	</header>
 	
-	<section id="Buttons">
-		<h2><a href="Index.html">Hem</a></h2>
-		<h2><a href="">Om</a></h2>
-		<h2><a href="">Kontakt</a></h2>
-		<h2><a href="">Projekt</a></h2>
-	</section>
+	<nav>
+		<ul id="buttons">
+			<li><a href="Index.html">Hem</a></li>
+			<li><a href="">Om</a></li>
+			<li><a href="">Kontakt</a></li>
+			<li><a href="">Projekt</a></li>
+		</ul>
+	</nav>
 	
 	<section id="Picture">
-		<img src="206122_4038337287255_1041812762_n.jpg" />
+		<img src="images/elias.jpg" />
 	</section>
 		
 	<footer>
