--- a/Webbutveckling/Hemsidor/Min portfolio/Index.html
+++ b/Webbutveckling/Hemsidor/Min portfolio/Index.html
@@ -8,8 +8,8 @@
 	
 <body class="Container">
 	<header>
-		<div id="style">
-			<img src="images/header_text.png" />
+		<div id="header_style">
+			<a href="Index.html"><img src="images/header_text.png" /></a>
 		</div>
 		
 	</header>
@@ -23,12 +23,17 @@
 		</ul>
 	</nav>
 	
-	<section id="Picture">
-		<img src="images/elias.jpg" />
+	<section id="contenttext">
+		<p id="news"> Hej </p>
+		<p id="updates"> Då </p>
+	</section>
+	
+	<section>
+		<img id="picture" src="images/elias.jpg" />
 	</section>
 		
 	<footer>
-		<p>Copyright Elias Axelsson</p>
+		<p>© Copyright Elias Axelsson</p>
 	</footer>
 </body>
 </HTML>
