--- a/Webbutveckling/Hemsidor/Min portfolio/Index.html
+++ b/Webbutveckling/Hemsidor/Min portfolio/Index.html
@@ -17,23 +17,29 @@
 	<nav>
 		<ul id="buttons">
 			<li><a href="Index.html">Hem</a></li>
-			<li><a href="">Om</a></li>
+			<li><a href="">Om mig</a></li>
 			<li><a href="">Kontakt</a></li>
 			<li><a href="">Projekt</a></li>
 		</ul>
 	</nav>
 	
-	<section id="contenttext">
-		<p id="news"> Hej </p>
-		<p id="updates"> Då </p>
-	</section>
+	<section id="pagecontent">
 	
-	<section>
-		<img id="picture" src="images/elias.jpg" />
+		<section id="contenttext">
+			<h3 class="news">Nyheter:</h3>
+			<p class="news">En kille blev påkörd idag :/</p>
+			
+			<h3 class="updates">Uppdateringar:</h3>
+			<p class="updates">Kommer snart</p>
+		</section>
+		
+		<a href=""><img id="picture" src="images/elias.jpg" /></a>
+		
 	</section>
 		
 	<footer>
 		<p>© Copyright Elias Axelsson</p>
+		<img id="facebook_logo" src="images/facebook_logo.png" />
 	</footer>
 </body>
 </HTML>
