Modified my portfolio

--- a/Webbutveckling/Hemsidor/Min portfolio/Index.html
+++ b/Webbutveckling/Hemsidor/Min portfolio/Index.html
@@ -39,7 +39,12 @@
 		
 	<footer>
 		<p>© Copyright Elias Axelsson</p>
-		<img id="facebook_logo" src="images/facebook_logo.png" />
+		
+		<div id="logos">
+			<img id="facebook_logo" src="images/facebook_logo.png" />
+			<img id="wordpress_logo" src="images/wordpresslogo (2).png" />
+			<img id="ytlogo" src="images/YTLogo.png" />
+		</div>
 	</footer>
 </body>
 </HTML>
