Modified min portfolio

--- a/Webbutveckling/Hemsidor/Min portfolio/Om mig.html
+++ b/Webbutveckling/Hemsidor/Min portfolio/Om mig.html
@@ -17,7 +17,7 @@
 	<nav>
 		<ul id="buttons">
 			<li><a href="Index.html">Hem</a></li>
-			<li><a href="Om mig.html">Om mig</a></li>
+			<li><a href="">Om mig</a></li>
 			<li><a href="">Kontakt</a></li>
 			<li><a href="">Projekt</a></li>
 		</ul>
@@ -27,13 +27,13 @@
 	
 		<section id="contenttext">
 			<h3 class="news">Nyheter:</h3>
-			<p class="news">Försov mig idag :/</p>
+			<p class="news">Föraj mig idag :/</p>
 			
 			<h3 class="updates">Uppdateringar:</h3>
 			<p class="updates">Jobbar med Om mig sidan nu :)</p>
 		</section>
 		
-		<a href="Om mig.html"><img id="picture" src="images/elias.jpg" /></a>
+		<a href=""><img id="picture" src="images/elias.jpg" /></a>
 		
 	</section>
 		
