I added my gantt schema for the teknik project and modified my portfolio

--- a/Webbutveckling/Hemsidor/Min portfolio/Index.html
+++ b/Webbutveckling/Hemsidor/Min portfolio/Index.html
@@ -1,7 +1,7 @@
 <!DocType html>
 <HTML>
 	<head>
-		<title>Tjo bre</title>
+		<title>Elias Axelsson</title>
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 		<link rel="Stylesheet" type="text/css" href="Stil.css"/>
 	</head>
@@ -27,7 +27,7 @@
 	
 		<section id="contenttext">
 			<h3 class="news">Nyheter:</h3>
-			<p class="news">Försov mig idag :/</p>
+			<p class="news">Hej</p>
 			
 			<h3 class="updates">Uppdateringar:</h3>
 			<p class="updates">Jobbar med Om mig sidan nu :)</p>
