--- a/Webbutveckling/Hemsidor/Min portfolio/Om mig.html
+++ b/Webbutveckling/Hemsidor/Min portfolio/Om mig.html
@@ -1,7 +1,7 @@
 <!DocType html>
 <HTML>
 	<head>
-		<title>Tjo bre</title>
+		<title>Om mig</title>
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 		<link rel="Stylesheet" type="text/css" href="Stil.css"/>
 	</head>
@@ -32,8 +32,6 @@
 			<h3 class="updates">Uppdateringar:</h3>
 			<p class="updates">Jobbar med Om mig sidan nu :)</p>
 		</section>
-		
-		<a href=""><img id="picture" src="images/elias.jpg" /></a>
 		
 	</section>
 		
