Changed Min portfolio and made a Gantt schema

--- a/Webbutveckling/Hemsidor/Min portfolio/Index.html
+++ b/Webbutveckling/Hemsidor/Min portfolio/Index.html
@@ -6,7 +6,7 @@
 		<link rel="Stylesheet" type="text/css" href="Stil.css"/>
 	</head>
 	
-<body class="Container">
+<body>
 	<header>
 		<div id="header_style">
 			<a href="Index.html"><img src="images/header_text.png" /></a>
@@ -14,28 +14,34 @@
 		
 	</header>
 	
-	<nav>
-		<ul id="buttons">
-			<li><a href="Index.html">Hem</a></li>
-			<li><a href="Om mig.html">Om mig</a></li>
-			<li><a href="">Kontakt</a></li>
-			<li><a href="">Projekt</a></li>
-		</ul>
-	</nav>
-	
-	<section id="pagecontent">
-	
-		<section id="contenttext">
-			<h3 class="news">Nyheter:</h3>
-			<p class="news">Hej</p>
+	<div class="container">
+		<nav>
+			<ul id="buttons">
+				<li><a href="Index.html">Hem</a></li>
+				<li><a href="Om mig.html">Om mig</a></li>
+				<li><a href="">Kontakt</a></li>
+				<li><a href="">Projekt</a></li>
+			</ul>
+		</nav>
+		
+		<div id="pagecontent">
+
+			<a href="Om mig.html"><img id="picture" src="images/elias.jpg" /></a>
+		
+			<section class="contenttext">
+				<h3 class="news">Nyheter:</h3>
+				<p class="news">Hej</p>
+			</section>
+
+			<section class="contenttext">
+				<h3 class="updates">Uppdateringar:</h3>
+				<p class="updates">Jobbar med Om mig sidan nu :)</p>
+			</section>
+
+			<div class="clear"></div>
 			
-			<h3 class="updates">Uppdateringar:</h3>
-			<p class="updates">Jobbar med Om mig sidan nu :)</p>
-		</section>
-		
-		<a href="Om mig.html"><img id="picture" src="images/elias.jpg" /></a>
-		
-	</section>
+		</div>
+	</div>
 		
 	<footer>
 		<p>© Copyright Elias Axelsson</p>
