--- a/Webbutveckling/Hemsidor/Min portfolio/Om mig.html
+++ b/Webbutveckling/Hemsidor/Min portfolio/Om mig.html
@@ -6,35 +6,40 @@
 		<link rel="Stylesheet" type="text/css" href="Stil.css"/>
 	</head>
 	
-<body class="Container">
+<body>
+	
 	<header>
 		<div id="header_style">
 			<a href="Index.html"><img src="images/header_text.png" /></a>
 		</div>
-		
+	
 	</header>
-	
-	<nav>
-		<ul id="buttons">
-			<li><a href="Index.html">Hem</a></li>
-			<li><a href="">Om mig</a></li>
-			<li><a href="">Kontakt</a></li>
-			<li><a href="">Projekt</a></li>
-		</ul>
-	</nav>
-	
-	<section id="pagecontent">
-	
-		<section id="contenttext">
-			<h3 class="news">Nyheter:</h3>
-			<p class="news">Föraj mig idag :/</p>
+
+	<div class="container">
+		<nav>
+			<ul id="buttons">
+				<li><a href="Index.html">Hem</a></li>
+				<li><a href="">Om mig</a></li>
+				<li><a href="">Kontakt</a></li>
+				<li><a href="">Projekt</a></li>
+			</ul>
+		</nav>
+		
+		<section id="pagecontent">
+		
+			<section class="contenttext">
+				<h3 class="news">Nyheter:</h3>
+				<p class="news">Föraj mig idag :/</p>
+			</section>
+
+			<section class="contenttext">
+				<h3 class="updates">Uppdateringar:</h3>
+				<p class="updates">Jobbar med Om mig sidan nu :)</p>
+			</section>
 			
-			<h3 class="updates">Uppdateringar:</h3>
-			<p class="updates">Jobbar med Om mig sidan nu :)</p>
 		</section>
-		
-	</section>
-		
+	</div>
+
 	<footer>
 		<p>© Copyright Elias Axelsson</p>
 		
