Modified Min portfolio

--- a/Webbutveckling/Hemsidor/Min portfolio/Index.html
+++ b/Webbutveckling/Hemsidor/Min portfolio/Index.html
@@ -19,23 +19,23 @@
 			<ul id="buttons">
 				<li><a href="Index.html">Hem</a></li>
 				<li><a href="Om mig.html">Om mig</a></li>
-				<li><a href="">Kontakt</a></li>
-				<li><a href="">Projekt</a></li>
+				<li><a href="Kontakt.html">Kontakt</a></li>
+				<li><a href="Projekt.html">Projekt</a></li>
 			</ul>
 		</nav>
 		
 		<div id="pagecontent">
 
-			<a href="Om mig.html"><img id="picture" src="images/elias.jpg" /></a>
+			<a href="Om mig.html"><img id="pictureOfMe" src="images/elias.jpg" /></a>
 		
 			<section class="contenttext">
 				<h3 class="news">Nyheter:</h3>
-				<p class="news">Hej</p>
+				<p class="news">Sov länge idag :)</p>
 			</section>
 
 			<section class="contenttext">
 				<h3 class="updates">Uppdateringar:</h3>
-				<p class="updates">Jobbar med Om mig sidan nu :)</p>
+				<p class="updates">Jobbar med Kontakt sidan nu :)</p>
 			</section>
 
 			<div class="clear"></div>
