Modified min portfolio and added my project of awesome

--- a/Webbutveckling/Hemsidor/Min portfolio/Projekt.html
+++ b/Webbutveckling/Hemsidor/Min portfolio/Projekt.html
@@ -31,10 +31,10 @@
 
 				<h3>Mina projekt</h3>
 
-				<ul>
-					<li>Mobil: 0728-020255</li>
-					<li>E-mail: Elias.Axesadasfdfsdlsson.te12d@gmail.com</li>
-				</ul>
+				<p>Här är en länk till min github där mycket av mina arbeten finns :)<a href="https://github.com/XellleX"> XellleX's github</a></p>
+
+				<p>En bild på mitt simpla battleship (Den heter battlship2 på github).</p>
+				<img id="battleship_picture" src="images/battleship.png" />
 
 			</section>
 			
