--- a/Webbutveckling/Hemsidor/Min portfolio/Index.html
+++ b/Webbutveckling/Hemsidor/Min portfolio/Index.html
@@ -18,7 +18,7 @@
 		<nav>
 			<ul id="buttons">
 				<li><a href="Index.html">Hem</a></li>
-				<li><a href="Om mig.html">Om mig</a></li>
+				<li><a href="Om_mig.html">Om mig</a></li>
 				<li><a href="Kontakt.html">Kontakt</a></li>
 				<li><a href="Projekt.html">Projekt</a></li>
 			</ul>
@@ -26,7 +26,7 @@
 		
 		<div id="pagecontent">
 
-			<a href="Om mig.html"><img id="pictureOfMe" src="images/elias.jpg" /></a>
+			<a href="Om_mig.html"><img id="pictureOfMe" src="images/elias.jpg" /></a>
 		
 			<section class="contenttext">
 				<h3 class="news">Nyheter:</h3>
