--- a/Webbutveckling/Hemsidor/Min portfolio/Om_mig.html
+++ b/Webbutveckling/Hemsidor/Min portfolio/Om_mig.html
@@ -26,15 +26,18 @@
 		</nav>
 		
 		<section id="pagecontent">
+
+			<img id="picture" src="images/syskon.jpg" />
 		
 			<section class="contenttext">
 
-				<h3>Kontakt</h3>
+				<h3>Om mig</h3>
 
-				<ul>
-					<li>Mobil: 0728-020255</li>
-					<li>E-mail: Elias.Axelsson.te12d@gmail.com</li>
-				</ul>
+				<p>Jag heter Elias Axlesson och är född 1996-11-30. Här på bilden är mina syskon, Victor som är född 1992, Julia som är född 1994 och jag som är i mitten.</p>
+
+				<p>Jag går på gymnasiet med teknisk inriktning, andra året.</p>
+
+				<p>På min fritid spelar jag mycket dator och pluggar en hel del.</p>
 
 			</section>
 			
