--- a/Webbutveckling/Hemsidor/Min portfolio/Projekt.html
+++ b/Webbutveckling/Hemsidor/Min portfolio/Projekt.html
@@ -19,7 +19,7 @@
 		<nav>
 			<ul id="buttons">
 				<li><a href="Index.html">Hem</a></li>
-				<li><a href="Om mig.html">Om mig</a></li>
+				<li><a href="Om_mig.html">Om mig</a></li>
 				<li><a href="Kontakt.html">Kontakt</a></li>
 				<li><a href="Projekt.html">Projekt</a></li>
 			</ul>
